@startuml pomodoro_domain
left to right direction

class User {
  +id : int
  +email : string
  +password : string
}

class Parameters {
  +id : int
  +autostartWork : bool
  +autostartRest : bool
  +autoRestartCycle : bool
  +notificationsOn : bool
}

class Task {
  +id : int
  +title : string
  +description : string
  +estimatedTime : int
  +progress : int
  +creationDate : DateTime
  +startDate : DateTime
  +timeSpent : int
  +endDate : DateTime
}

class History {
  +id : int
  +workTime: long
  +restTime: long
  +startTime: DateTime
}
class Cycle {
  +id : int
  +name : string
}

class Period {
  +id : int
  +type : bool
  +time : int
  +index : int
}

class Status {
   +id : int
  +name : string
}

' Relations

User "1" -- "1" Parameters
User "1" -- "0..*" Task
User "1" -- "0..*" Cycle
User "1" -- "1" History
Cycle "1" -- "1..*" Period
Task "0..*" -- "1" Status

@enduml
